los filtros funcan aunque deberia ajustar el css