@@ -3,21 +3,19 @@ package ar.edu.utn.frba.dds.model.fuentes;
 import ar.edu.utn.frba.dds.model.fuentes.apis.FuenteAdapter;
 import ar.edu.utn.frba.dds.model.fuentes.apis.configuracion.ConfiguracionAdapter;
 import ar.edu.utn.frba.dds.model.hecho.Hecho;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import javax.persistence.CascadeType;
+import java.util.Objects;
 import javax.persistence.Column;
 import javax.persistence.DiscriminatorValue;
 import javax.persistence.Entity;
-import javax.persistence.FetchType;
-import javax.persistence.JoinColumn;
-import javax.persistence.OneToMany;
 import javax.persistence.PostLoad;
+import javax.persistence.PrimaryKeyJoinColumn;
+import javax.persistence.Table;
 import javax.persistence.Transient;
 
 @Entity
+@Table(name = "fuente_externa_api")
+@PrimaryKeyJoinColumn(name = "fuente_id")
 @DiscriminatorValue("API_EXTERNA")
 public class FuenteExternaAPI extends FuenteDeCopiaLocal {
 
@@ -30,26 +28,27 @@ public class FuenteExternaAPI extends FuenteDeCopiaLocal {
   @Transient
   private ConfiguracionAdapter configuracionAdapter;
 
-  // Relación persistente específica para FuenteExternaAPI
-  @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY)
-  @JoinColumn(name = "fuente_externa_api_id")
-  private List<Hecho> copiaLocalDeHechos = new ArrayList<>();
-
   public FuenteExternaAPI() {
     super();
   }
 
   public FuenteExternaAPI(String nombre, ConfiguracionAdapter configAdapter) {
     super(nombre);
-    if (configAdapter == null) {
-      throw new IllegalArgumentException("La configuración del adaptador no puede ser nula.");
-    }
+    Objects.requireNonNull(configAdapter, "La configuración del adaptador no puede ser nula.");
     this.configuracionAdapter = configAdapter;
     this.reconstruirDependencias();
   }
 
+  @Override
+  public String getTipo() {
+    return "API_EXTERNA";
+  }
+
   @PostLoad
   protected void reconstruirDependencias() {
+    // Nota: configuracionAdapter es transient, por lo que será null al cargar de DB.
+    // Si se requiere persistencia real del adaptador, se debería guardar su configuración
+    // (ej: clase del adaptador o parámetros) en columnas de la base de datos.
     if (this.configuracionAdapter != null) {
       this.adaptador = this.configuracionAdapter.build();
     }
@@ -58,46 +57,24 @@ public class FuenteExternaAPI extends FuenteDeCopiaLocal {
   @Override
   protected List<Hecho> consultarNuevosHechos() {
     if (this.adaptador == null) {
-      System.err.println("Advertencia: El adaptador para la fuente '" + this.fuente_nombre + "' no está inicializado.");
-      return Collections.emptyList();
+      // Intento de recuperación si solo tenemos la URL
+      if (this.urlBase != null) {
+        System.err.println("Advertencia: Adaptador nulo. Se tiene URL pero falta la estrategia de configuración.");
+      }
+      return List.of();
     }
     try {
       return this.adaptador.consultarHechos();
     } catch (Exception e) {
-      System.err.println("Error al consultar la API externa para la fuente '" + this.fuente_nombre + "': " + e.getMessage());
-      return Collections.emptyList();
+      System.err.println("Error al consultar API '" + this.getNombre() + "': " + e.getMessage());
+      return List.of();
     }
   }
 
-  @Override
-  public List<Hecho> getHechos() {
-    if (this.copiaLocalDeHechos == null || this.copiaLocalDeHechos.isEmpty()) {
-      return Collections.emptyList();
-    }
-    return Collections.unmodifiableList(this.copiaLocalDeHechos);
-  }
-
-  @Override
-  public void forzarActualizacionSincrona() {
+  public void actualizarDesdeAPI() {
     List<Hecho> nuevosHechos = this.consultarNuevosHechos();
     if (nuevosHechos != null && !nuevosHechos.isEmpty()) {
-      this.copiaLocalDeHechos.clear();
-      this.copiaLocalDeHechos.addAll(nuevosHechos);
-    }
-  }
-
-  /**
-   * Setter para la copia local de hechos.
-   */
-  @Override
-  public void setCopiaLocalDeHechos(List<Hecho> hechos) {
-    if (this.copiaLocalDeHechos == null) {
-      this.copiaLocalDeHechos = new ArrayList<>();
-    } else {
-      this.copiaLocalDeHechos.clear();
-    }
-    if (hechos != null) {
-      this.copiaLocalDeHechos.addAll(hechos);
+      this.setHechos(nuevosHechos);
     }
   }
 
@@ -107,5 +84,36 @@ public class FuenteExternaAPI extends FuenteDeCopiaLocal {
 
   public String getUrlBase() {
     return this.urlBase;
+  }
+
+  public void setAdaptador(FuenteAdapter adaptador) {
+    this.adaptador = adaptador;
+  }
+
+  public void setConfiguracionAdapter(ConfiguracionAdapter configuracionAdapter) {
+    this.configuracionAdapter = configuracionAdapter;
+    if (configuracionAdapter != null) {
+      this.adaptador = configuracionAdapter.build();
+    }
+  }
+
+  @Override
+  public String toString() {
+    return String.format("FuenteExternaAPI{id=%d, nombre='%s', url='%s'}",
+                         getId(), getNombre(), urlBase);
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) return true;
+    if (!(o instanceof FuenteExternaAPI)) return false;
+    if (!super.equals(o)) return false;
+    FuenteExternaAPI that = (FuenteExternaAPI) o;
+    return Objects.equals(urlBase, that.urlBase);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(super.hashCode(), urlBase);
   }
 }
